[B]Version 0.3.9[/B]
- Fix for 'Cast' in labs... which caused an error on XBMC Gotham RC1.

[B]Version 0.3.8[/B]
- Users Sections: Parsing for users.
- Fixed domain usage in a few strings, so to better work with different domains.
- Coming Soon Section: Fixed Area-Split data and Item Parsing regex.
- TV Section: Fixed Area-Split data for narrowing down the area the right items are in... this was for Popular ("all time" and "new").

[B]Version 0.3.7[/B]
- Note: Watched State is currently only setup to work when metahandler is installed and MetaData is enabled.
- Attempting to have the addon set a movie/episode as unwatched if player.play() errors.
- Barring any unforeseen side-effects elsewhere, I've got the PlayVideo function for movies and episode links setup to mark things as watched right before playing the video.
- Ability to Change Watched State on Movies - Seems to work currently.
- Ability to Change Watched State on TVShows - Attempted but seemed to fail, so I hid the ContextMenuItem.
- Ability to Change Watched State on Episodes - Seems to work currently.
- MetaData on Episodes
- MetaData on Seasons

[B]Version 0.3.6[/B]
- Lot of html-coding fixes for parsing to come up to date with the site changes that have occurred over time.
- API Search - Setup to use metahandler when Metadata is enabled and sitedata from fetched pages when its disabled.
- API Search - Converting coding to use metahandler rather than self fetched metadata functions.
- API_Browse - Fixed IMDB_ID to Value string.
- Ton of fixes to the SiteData fetches/parsing.
- Fix for Search [API].

[B]Version 0.3.5[/B]
- Still no Latest Episodes Listings at this time.  I just haven't felt up to dealing with trying to fix up the Latest Comments to filter out the tv shows
- Fix for Listings in Coming Soon section.
- Fix for Coming Soon By-Date path.
- Fix for Links Listings.
- Fix for TV and Movies Listings.
- "Enable Metadata" option is now visible in Metadata section of Addon Settings.
