@@ -114,7 +114,9 @@ def ps(x):
 		,'cMI.jDownloader.addlink.url':		'XBMC.RunPlugin(plugin://plugin.program.jdownloader/?action=addlink&url=%s)'
 		,'LI.movies.match.items.old': 		'class="coverImage" title="(.+?)".+?href="(.+?)".+?src="(.+?)".+?<a title=".+?\(([\d]+)\)'
 		,'LI.movies.match.items': 				'class="coverImage" title="(.+?)".+?href="(.+?)".+?data-original="(.+?)".+?<a title=".+?\(([\d]+)\)'
-		,'LI.movies.match.items2': 				'class="coverImage" title="(.+?)"\s+href="(.+?)">.+?src="(http://static\.solarmovie\.so/images/movies/\d+_\d+x\d+\.jpg)".+?<a\stitle=".+?\(([\d]+)\)'
+		,'LI.movies.match.items2': 				'class="coverImage" title="(.+?)"\s+href="(.+?)">.+?src="(http://static\d*\.solarmovie\.\D+/images/movies/\d+_\d+x\d+\.jpg)".+?<a\stitle=".+?\(([\d]+)\)'
+		,'b2LI.movies.match.items2': 				'class="coverImage" title="(.+?)"\s+href="(.+?)">.+?src="(http://static\d*\.solarmovie\.so/images/movies/\d+_\d+x\d+\.jpg)".+?<a\stitle=".+?\(([\d]+)\)'
+		,'bLI.movies.match.items2': 				'class="coverImage" title="(.+?)"\s+href="(.+?)">.+?src="(http://static\.solarmovie\.so/images/movies/\d+_\d+x\d+\.jpg)".+?<a\stitle=".+?\(([\d]+)\)'
 		,'aLI.movies.match.items': 				'class="coverImage" title="(.+?)".+?href="(.+?)".+?data-original="(.+?)".+?<a title=".+?\(([\d]+)\)'
 		,'aLI.movies.match.items2': 			'class="coverImage" title="(.+?)"[\n]\s+href="(.+?)">.+?src="(http://static\.solarmovie\.so/images/movies/\d+_\d+x\d+\.jpg)".+?<a\stitle=".+?\(([\d]+)\)'
 		,'LI.movies.match.items3': 				'class="coverImage" title="(.+?)"[\n]\s+href="(.+?)">.+?src="(http://static\.solarmovie\.so/images/movies/\d+_\d+x\d+\.jpg)".+?<a\stitle=".+?\(([\d]+)\)'
@@ -145,7 +147,7 @@ def ps(x):
 		,'LI.tv.match.items.old': 				'class="coverImage" title="(.+?)".+?href="(.+?)".+?src="(.+?)".+?<a title=".+?\(([\d]+)\)'
 		,'LI.nextpage.name': 							'  [COLOR goldenrod]>  [COLOR red]Next[/COLOR]...[/COLOR]'
 		,'LI.nextpage.match': 						'<li class="next"><a href=.+?page=([\d]+)"'
-		,'LI.nextpage.check': 						'<li class="next"><a href="http://www.solarmovie.so/'
+		,'LI.nextpage.check': 						'<li class="next"><a href="http://'
 		,'LI.page.param': 								'?page='
 		,'LI.page.find': 									'<li><a href=.+?page=([\d]+)"'
 		,'BrowseByYear.tv.url1': 					'/tv/watch-tv-shows-'
