@@ -4,7 +4,7 @@
 		<setting id="pages"    type="labelenum" label="Number of Pages" values="1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|25|30|35|40|45|50|55|60|70|80|90|99|100"             default="1"/>
 		<setting id="linksmaxshown" type="labelenum" label="Number of Links (Host Menu)" values="1|2|3|4|5|10|15|20|25|30|35|40|45|50|55|60|70|80|90|99|100|150|200|250|300|350|400|450|500|550|600|700|800|900|1000|1500|2000|3000|9000|9999"             default="9999"/>
 		<setting id="enableDomain" 	type="bool" label="Enable Custom Domain" default="false" visible="true"/>
-		<setting id="customDomain" 	type="text" label="Custom Domain" default="http://solarmovie.occupyuk.co.uk" enable="!eq(-1,false)" />
+		<setting id="customDomain" 	type="text" label="Custom Domain" default="http://solarmovie.unblocked.co" enable="!eq(-1,false)" />
 		<setting id="debug-enable" 	type="bool" label="Enable Debugging to File" default="false" visible="true"/>
 		<setting id="debug-show" 		type="bool" label="Enable Debugging to Notice(s)" default="false" visible="true"/>
 		<setting id="label-empty-favorites" 		type="bool" label="Show Labels in List: Empty Favorites" default="false" visible="true"/>
