@@ -1,3 +1,13 @@
+[B]Version 0.4.2[/B]
+- Pagination Fix.
+
+[B]Version 0.4.1[/B]
+- Error handling around line 1310 in API_Browse().
+
+[B]Version 0.4.0[/B]
+- Switched the default custom domain in settings.xml.
+- Slight additional tweaks to domain fixing and regex(s).
+
 [B]Version 0.3.9[/B]
 - Fix for 'Cast' in labs... which caused an error on XBMC Gotham RC1.
 
